--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,7 +26,7 @@
     <string name="createRpLblCategory">Categoria</string>
     <string name="createRpLblDescription">Descripcion</string>
     <string name="createRpLblLocation">Ubicacion</string>
-    <string name="createRpButtonSelectDate">Seleccionar</string>
+    <string name="createRpButtonSelectDate">Seleccionar fecha</string>
     <string name="createRpButtonSelectOnMap">Seleccionar ubicacion en el mapa</string>
     <string name="createRpButtonTakePicture">Tomar Fotografia</string>
     <string name="createRpButtonContinue">Continuar</string>
