--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,7 @@
     <string name="createRpLblDate">Fecha</string>
     <string name="createRpLblCategory">Categoria</string>
     <string name="createRpLblDescription">Descripcion</string>
+    <string name="createRpLblDescriptionHint">(Opcional)</string>
     <string name="createRpLblLocation">Ubicacion</string>
     <string name="createRpButtonSelectDate">Seleccionar fecha</string>
     <string name="createRpButtonSelectOnMap">Seleccionar ubicacion en el mapa</string>
